test/fails/bad_generics/basics6.lgl
int f(`t x) {  // Can't use a generic that hasn't been declared
    return 1;
}

void main() {
    print 1;
}